# watto

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml  weekly.yml
src/: helpers.rs  lib.rs  offset_set.rs  pod.rs  string_table.rs  utils.rs  writer.rs
tests/: test.rs
