[package]
name = "watto"
version = "0.2.0"
edition = "2021"

description = "Utilities for parsing and serializing Plain Old Data"
authors = ["Sentry <hello@sentry.io>"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/watto"
homepage = "https://github.com/getsentry/watto"
repository = "https://github.com/getsentry/watto"

[features]
std = []
writer = ["std"]
strings = ["std", "hashbrown", "leb128", "thiserror"]

[dependencies]
hashbrown = { version = "0.15.1", optional = true }
leb128 = { version = "0.2.5", optional = true }
thiserror = { version = "2.0.3", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
